--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
     <div class="offset-1   ">
       <br>
       <div>A Computer Science Learner. My passion is about seeking the best version of my own self and
-        adding value to people's life.</div>
+        adding value to people's life.          
+      </div>
+      <div>
+        In this point in my life, I am looking forward to working in web development.
+        That's what I am seeking as a way of enjoying this great combination of business, 
+        development and programing with some artistic touches and attention to others perspective (UX). 
+      </div>
+      
       <br>
       <br>
       <div class="offset-3  justify-content-between">
@@ -101,8 +108,8 @@
         <div class="font-weight-bold">Exploratory Center for Science & Technology</div>
 
 
-        <div>Teaching children from 9-14 year-old computer skills and basic programming concepts for around 20 day-
-          program</div>
+        <div>Teaching kids Computer Skills and Basic Programming Concepts for around 20 days
+          </div>
       </div>
       <div>
         <span class="text-danger"> August 2019 - September 2019</span>
@@ -115,7 +122,7 @@
         <h3>Web Developer Intern</h3>
         <div class="font-weight-bold">Makhbouz</div>
 
-        <div>Joining them remotly for one month working in Back Office Application using Reactjs and Firebase</div>
+        <div>Joining them remotly for about one month working in Back Office Application using Reactjs and Firebase</div>
       </div>
       <div>
         <span class="text-danger">May 2019 - June 2019</span>
