--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
       <li class="list-inline-item">
         <i class="fab fa-css3-alt"></i>
       </li>
+       <li class="list-inline-item">
+       <i class="fab fa-bootstrap"></i>
+      </li>
       <li class="list-inline-item">
         <i class="fab fa-js-square"></i>
       </li>
@@ -178,6 +181,12 @@
 
       <li class="list-inline-item">
         <i class="fab fa-npm"></i>
+      </li>
+       <li class="list-inline-item">
+        <i class="fab fa-python"></i>     
+      </li>
+       <li class="list-inline-item">
+        <i class="fab fa-php"></i>
       </li>
     </ul>
     </div>
