--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
     <br>
     <div class="display-4 " style="color:rosybrown; position: absolute;top:2025px; left:500px" > Comming soon </div>
 
-    <img src="background.jpg"  style = "height:200px;width:100%"alt="">
-
+<!--     <img src="background.jpg"  style = "height:200px;width:100%"alt="">
+ -->
   </section>
 
 
