--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
        <li class="list-inline-item">
         <i class="fab fa-php"></i>
       </li>
+       <li class="list-inline-item">
+      <i class="fab fa-linux"></i>
+      </li>
+      
     </ul>
     </div>
   </section>
