--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
       <br>
       <br>
       <div class="offset-3  justify-content-between">
-        <a href="#" class="col">
+        <a href="https://www.linkedin.com/in/aya-altayeb-66610b13a" class="col">
           <i class="fab fa-linkedin-in" style="color:rosybrown; font-size: 50px;"></i>
         </a>
-        <a href="#" class="col">
+        <a href="https://github.com/AyaAltayeb-FullStack" class="col">
           <i class="fab fa-github" style="color:rosybrown; font-size: 50px;"></i>
         </a>
 
-        <a href="#" class="col">
+        <a href="https://www.facebook.com/profile.php?id=100009095014799" class="col">
           <i class="fab fa-facebook-f" style="color:rosybrown; font-size: 50px;"></i>
         </a>
       </div>
