--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
       <li class="list-inline-item">
         <i class="fab fa-npm"></i>
       </li>
+        <li class="list-inline-item">
+        <i class="fab fa-java"></i>   
+      </li>  
        <li class="list-inline-item">
         <i class="fab fa-python"></i>     
       </li>
