--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="font-weight-bold">Exploratory Center for Science & Technology</div>
 
 
-        <div>Teaching kids Computer Skills and Basic Programming Concepts for around 20 days
+        <div>taught kids Computer Skills and Basic Programming Concepts for around 20 days.
           </div>
       </div>
       <div>
@@ -122,7 +122,7 @@
         <h3>Web Developer Intern</h3>
         <div class="font-weight-bold">Makhbouz</div>
 
-        <div>Joining them remotly for about one month working in Back Office Application using Reactjs and Firebase</div>
+        <div>Joined them remotly for about one month working in Back Office Application using Reactjs and Firebase.</div>
       </div>
       <div>
         <span class="text-danger">May 2019 - June 2019</span>
@@ -136,7 +136,7 @@
         <h3>Content Creator Intern</h3>
         <div class="font-weight-bold">Matruh Army Hospital</div>
 
-        <div>Working with a team of doctors to enhance the nurses’ skills and knowledge for around 21 days</div>
+        <div>Worked with a team of doctors to enhance the nurses’ skills and knowledge for around 21 days.</div>
       </div>
 
       <div>
